added pictures and columns added

--- a/email.html
+++ b/email.html
@@ -18,18 +18,27 @@
                         <td>Cheesy grin chalk and cheese brie</td>
                     </tr>
                     <tr>
-                        <td>Emmental parmesan cheeseburger. Ricotta who moved my cheese rubber cheese halloumi gouda edam goat emmental. Camembert de normandie rubber cheese macaroni cheese lancashire emmental babybel babybel mozzarella. Edam roquefort swiss mascarpone cream cheese.
+                        <td style="padding: 30px 0px 30px 0px;">Emmental parmesan cheeseburger. Ricotta who moved my cheese rubber cheese halloumi gouda edam goat emmental. Camembert de normandie rubber cheese macaroni cheese lancashire emmental babybel babybel mozzarella. Edam roquefort swiss mascarpone cream cheese.
 
 Pecorino cow rubber cheese. Mascarpone hard cheese caerphilly gouda feta st. agur blue cheese cheese on toast goat. Cauliflower cheese feta lancashire airedale when the cheese comes out everybody's happy when the cheese comes out everybody's happy jarlsberg paneer. Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td>
                     </tr>
                     <tr>
-                        <td>Feta cheese on toast cheesy grin. Blue castello danish fontina goat pecorino st. agur blue cheese feta pepper jack cheddar. </td>
+                        <td>
+                            <table border="1" cellspacing="0" cellpadding="0" width="100%">
+                                <tr>
+                                    <td width="45%">Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td>
+                                    <td width="10%" style="font-size: 0; line-height: 0;">%nbsp;</td>
+                                    <td width="45%">Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td>
+                                </tr>
+                            </table>
+                        </td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr>
-            <td bgcolor="#FF0000">Row 3</td>
+            <td bgcolor="#FF0000">Row 3
+            </td>
         </tr>
     </table>    
 </table>
