added picture and updated html

--- a/email.html
+++ b/email.html
@@ -26,9 +26,17 @@ Pecorino cow rubber cheese. Mascarpone hard cheese caerphilly gouda feta st. agu
                         <td>
                             <table border="1" cellspacing="0" cellpadding="0" width="100%">
                                 <tr>
-                                    <td width="45%">Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td>
+                                    <td width="45%">
+                                        <table border="1" cellspacing="0" cellpadding="0">
+                                            <tr><td><img src="chocolate.jpg" alt="chocolate" width="100%" height="140" style="display: block;"></td></tr>
+                                            <tr><td>Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td></tr>
+                                        </table>
+                                    </td>
                                     <td width="10%" style="font-size: 0; line-height: 0;">%nbsp;</td>
-                                    <td width="45%">Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td>
+                                    <td width="45%">
+                                        <tr><td><img src="flower.jpg" alt="flower" width="100%" height="140" style="display: block;"></td></tr>
+                                        <tr><td>Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td></tr>
+                                    </td>
                                 </tr>
                             </table>
                         </td>
