added icon images, finished footer, and removed borders

--- a/email.html
+++ b/email.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body style="margin=0; padding=0;">
-<table border="1" cellpadding="0" cellspacing="0" width="100%">
-    <table align="center" border="1" cellpadding="0" cellspaceing="0" width="600" style="border-collapse: collapse;">
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <table align="center" border="0" cellpadding="0" cellspaceing="0" width="600" style="border-collapse: collapse;">
         <tr>
-            <td bgcolor="#1485CC" align="center" style="padding: 40px 0px 30px 0px;"><img src="banner.png" alt="present" width="300" height="230"></td>
+            <td bgcolor="#1485CC" align="center" style="padding: 40px 0px 30px 0px;"><img src="banner.png" alt="present" width="260" height="180"></td>
         </tr>
         <tr>
             <td bgcolor="#FFFFFF" style="padding: 40px 30px 40px 30px">
-                <table border="1" cellspacing="0" cellpadding="0" width="100%">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%">
                     <tr>
-                        <td>Cheesy grin chalk and cheese brie</td>
+                        <td><b>Cheesy grin chalk and cheese brie!</b></td>
                     </tr>
                     <tr>
                         <td style="padding: 30px 0px 30px 0px;">Emmental parmesan cheeseburger. Ricotta who moved my cheese rubber cheese halloumi gouda edam goat emmental. Camembert de normandie rubber cheese macaroni cheese lancashire emmental babybel babybel mozzarella. Edam roquefort swiss mascarpone cream cheese.
@@ -24,18 +24,20 @@ Pecorino cow rubber cheese. Mascarpone hard cheese caerphilly gouda feta st. agu
                     </tr>
                     <tr>
                         <td>
-                            <table border="1" cellspacing="0" cellpadding="0" width="100%">
+                            <table border="0" cellspacing="0" cellpadding="0" width="100%">
                                 <tr>
-                                    <td width="45%">
-                                        <table border="1" cellspacing="0" cellpadding="0">
+                                    <td width="45%" valign="top">
+                                        <table border="0" cellspacing="0" cellpadding="0">
                                             <tr><td><img src="chocolate.jpg" alt="chocolate" width="100%" height="140" style="display: block;"></td></tr>
-                                            <tr><td>Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td></tr>
+                                            <tr><td style="padding: 25px 0px 0px 0px;">Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td></tr>
                                         </table>
                                     </td>
                                     <td width="10%" style="font-size: 0; line-height: 0;">%nbsp;</td>
-                                    <td width="45%">
-                                        <tr><td><img src="flower.jpg" alt="flower" width="100%" height="140" style="display: block;"></td></tr>
-                                        <tr><td>Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td></tr>
+                                    <td width="45%" valign="top">
+                                        <table border="0" cellspacing="0" cellpadding="0">
+                                            <tr><td><img src="travel.jpg" alt="travel" width="100%" height="140" style="display: block;"></td></tr>
+                                        <tr><td style="padding: 25px 0px 0px 0px;">Stinking bishop bavarian bergkase squirty cheese fromage frais monterey jack cheese strings.</td></tr>
+                                        </table>
                                     </td>
                                 </tr>
                             </table>
@@ -45,7 +47,19 @@ Pecorino cow rubber cheese. Mascarpone hard cheese caerphilly gouda feta st. agu
             </td>
         </tr>
         <tr>
-            <td bgcolor="#FF0000">Row 3
+            <td bgcolor="#FF0000">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                    <tr>
+                        <td width="75%" style="color: #000000;">Pecorino cow rubber cheese<br><a href="#">Unsubscribe </a>here
+                        </td>
+                        <td width="25%"><table align="right">
+                                <tr>
+                                    <td><a href="www.facebook.com"><img src="facebook.svg" alt="facebook icon" style="display: block;" border="0" width="38" height="38"></a></td>
+                                    <td><a href="www.instagram.com"><img src="instagram.svg" alt="instagram icon" style="display: block;" border="0" width="38" height="38"></a></td>
+                                </tr>
+                            </table></td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>    
